--- a/app/src/main/res/values/splash_theme.xml
+++ b/app/src/main/res/values/splash_theme.xml
@@ -6,8 +6,8 @@
         <item name="postSplashScreenTheme">@style/Theme.FiveOClockSomewhere</item>
 
         <!-- Status bar and Nav bar configs -->
-        <item name="android:statusBarColor">@color/app_red</item>
-        <item name="android:navigationBarColor">@color/app_red</item>
+        <item name="android:statusBarColor">@color/app_green</item>
+        <item name="android:navigationBarColor">@color/app_green</item>
         <item name="android:windowLightStatusBar">false</item>
     </style>
 </resources>
